# agentifier

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
docs/: api-spec.md  architecture.md  constraints.md  domain-model.md
scripts/: download_cfr.py
src/agentfier/: app.py  config.py
src/agentfier/analyzers/: __init__.py  api_architecture.py  auth.py  base.py  business_logic.py  configuration.py  data_layer.py  dependencies.py  frontend.py  infrastructure.py  integrations.py  observability.py  security.py  tech_stack.py
src/agentfier/claude/: client.py  prompts.py
src/agentfier/diagrams/: __init__.py  c4_generator.py  flow_generator.py
src/agentfier/ingestors/: base.py  github_ingestor.py  jar_ingestor.py  local_ingestor.py
src/agentfier/models/: analysis.py  enums.py  spec.py
src/agentfier/output/: __init__.py  api_doc_generator.py  conversion_plan.py  spec_generator.py
src/agentfier/ui/pages/: analyze.py  conversion.py  diagrams.py  guide.py  results.py
tests/: conftest.py  test_analyzers.py  test_claude_client.py  test_config.py  test_diagrams.py  test_ingestors.py  test_models.py  test_output.py
